--- a/nativebridge/package.json
+++ b/nativebridge/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nativebridge",
-  "main": "expo-router/entry",
+  "main": "index.js",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -17,12 +17,14 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.27",
+    "@react-navigation/stack": "^7.4.9",
     "axios": "^1.12.2",
     "expo": "~54.0.12",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
+    "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
