--- a/nativebridge/package.json
+++ b/nativebridge/package.json
@@ -45,6 +45,7 @@
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.7.10",
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
