--- a/nativebridge/package.json
+++ b/nativebridge/package.json
@@ -42,7 +42,8 @@
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "typescript": "~5.9.2"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.7.10",
